WarehouseEcommerce/Content/Theme/University/app/css/Site.css
/* ... */
        .basketTable [type="radio"]:checked + label:after,
        .basketTable [type="radio"]:not(:checked) + label:after {
            content: "";
            width: 14px;
            height: 14px;
            background: #ffffff;
            border: solid 4px #f33655;
            position: absolute;
            top: 2px;
            left: 2px;
            border-radius: 100%;
            -webkit-transition: all 0.2s ease;
            transition: all 0.2s ease;
        }

        .basketTable [type="radio"]:not(:checked) + label:after {
            opacity: 0;
            -webkit-transform: scale(0);
            transform: scale(0);
        }

        .basketTable [type="radio"]:checked + label:after {
            opacity: 1;
            -webkit-transform: scale(1);
            transform: scale(1);
        }
/*radio box form cart page -end*/


.nb_bannersec .np_bannerContentOuter .nb_bnr_count:after {
    content: "";
    width: 0px;
}

.nb_bannersec .np_bannerContentOuter .nb_bnr_count:before {
    content: "";
    width: 0px;
}


.accordion ul li div a h2 {
    text-transform: none;
}

.main-logo, .nb_foot_logo img {
    max-height: 88px;
}

.nb_logowrap {
    padding-top: 0px !important;
}


.nb_sec_navwrap .nb_sec_navlist li {
    cursor: pointer;
}

.res_navWrapper .nb_logowrap_res {
    width: calc(100% + 72px);
    background-color: #111111;
    margin: -36px -36px 20px -36px;
    padding: 30px;
}

.nb_res_nav_closeTrigger {
    color: #ffffff;
}


.nb_top_catSection .accordion ul li {
    width: 25%;
    margin: 15px;
}

.mobile-checkout {
    display: none !important;
}

@media (max-width: 768px) {

    .accordion {
        overflow-x: hidden;
        overflow-y: auto;
    }

    .nb_top_catSection .accordion ul {
        width: 100%;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;
        flex-wrap: wrap;
    }


    .nb_header {
        height: 150px;
        padding: 35px 10px 18px 10px;
    }

    .main-logo {
        max-height: 88px;
    }

    .uni-pages-pt {
        padding-top: 150px !important;
    }

    .basketTable tr td {
        display: table-row;
    }

    .basketTable tr.cmnRow .prd,
    .basketTable tr.cmnRow .qty,
    .basketTable tr.cmnRow .tot,
    .basketTable tr.cmnRow .price {
        width: 100%;
    }

        .basketTable tr.cmnRow .qty .QtyWrap,
        .basketTable tr.cmnRow .tot .priceTotal,
        .basketTable tr.cmnRow .price .priceWrapinner {
            height: 40px;
        }

    .mobile-checkout {
        display: flex !important;
        /*        margin: 0 10px*/
    }

    .basket-section .botomBtnsec .btmbtn.sho {
        margin-right: unset;
        margin-left: unset;
    }

    .headBoxTop,
    .basketTable tr.cmnRow .tot .in-basket-price-total:after,
    .basketTable tr.cmnRow .delivery,
    .basketTable tr.headRow {
        display: none;
    }
}
/*product list and feature product -start*/
@media(max-width:700px) {
    .list-on-tablets .prd_lst_boxouter .imagewrap img {
        width: 320px !important;
    }
}

@media(max-width:650px) {
    .list-on-tablets .prd_lst_boxouter .imagewrap img {
        width: 295px !important;
    }
}

@media(max-width:600px) {
    .list-on-tablets .prd_lst_boxouter .imagewrap img {
        width: 270px !important;
    }
}

@media(max-width:550px) {
    .list-on-tablets .prd_lst_boxouter .imagewrap img {
        width: 245px !important;
        height: 245px;
    }
}

@media(max-width:500px) {
    .list-on-tablets .prd_lst_boxouter .imagewrap img {
        width: 220px !important;
        height: 220px;
    }
}

@media(max-width:450px) {
    .list-on-tablets .prd_lst_boxouter .imagewrap img {
        width: 195px !important;
        height: 195px;
    }
}

@media(max-width:425px) {
    .list-on-tablets .prd_lst_boxouter .imagewrap img {
        width: 182px !important;
        height: 182px;
    }
}

@media(max-width:375px) {
    .list-on-tablets .prd_lst_boxouter .imagewrap img {
        width: 157px !important;
        height: 157px;
    }

    .list-on-tablets .prd_lst_boxouter .imagewrap img {
        width: 157px !important;
        height: 157px;
    }
}

@media(max-width:350px) {
    .list-on-tablets .prd_lst_boxouter .imagewrap img {
        width: 130px !important;
        height: 130px;
    }
}

/*product-list and feature-product -middle*/
.nb_top_catSection .nb_header_style1,
.feature-product-overflow .nb_header_style1 {
    margin-bottom: 30px !important;
    white-space:nowrap;
}

.feature-product-overflow .prd_lst_boxouter .badge {
    top: -3px;
}

.feature-product-overflow .owl-item {
    width: 235px !important;
}

.prd_lst_boxouter .prdName {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.feature-product-overflow .owl-item,
.list-on-tablets .prd_lst_boxouter {
    text-align: center;
}

.prd_lst_boxouter .imagewrap {
    margin-bottom: 15px !important;
}

.prd_lst_boxouter .prdName {
    min-height: unset;
    margin-bottom: 12px;
}

.list-on-tablets .foot .icolist,
.feature-product-overflow .foot .icolist {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

    .list-on-tablets .foot .icolist .cart-icon,
    .list-on-tablets .foot .icolist .bel-icon {
        margin-left: 31px;
    }

    .list-on-tablets .foot .icolist .cart-icon {
        margin-left: 30px;
    }

    .feature-product-overflow .foot .icolist .cart-icon,
    .feature-product-overflow .foot .icolist .bel-icon {
        margin-left: 16px;
    }

@media(max-width:1199px) {
    .list-on-tablets .foot .icolist .cart-icon,
    .list-on-tablets .foot .icolist .bel-icon {
        margin-left: 9px;
    }
}

.feature-product-overflow .owl-stage {
    width: 2500px !important;
}
/* ... */

